--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ backend/.venv/
 # 项目配置文件（根据你要求忽略）
 backend/uv.lock
 backend/.python-version
+backend/pyproject.toml
 data/ 
 frontend/node_modules
+.claude
