前端连接部分完成

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -10,4 +10,5 @@ FQIDAQAB
 -----END PUBLIC KEY-----"
 
 
-OPENAI_API_KEY=45fe96e831144703bac324a338c8598d.g1UXUSSj6uwheAau
+
+OPENAI_API_KEY=sk-S3fYdqw6snKuF8hwaEoTekAevJb0mreW1mrXDbNpWv3oOfOO
