--- a/backend/src/.env
+++ b/backend/src/.env
@@ -12,3 +12,4 @@ FQIDAQAB
 
 
 OPENAI_API_KEY=sk-S3fYdqw6snKuF8hwaEoTekAevJb0mreW1mrXDbNpWv3oOfOO
+CLERK_WEBHOOK_SECRET=whsec_jIpvDdNQY7lm4J7mNaQo5tyvkDOO3TNq
